--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   widgets_to_image: ^0.0.2
   readmore: ^2.2.0
   image_cropper: ^3.0.1
+  lottie: ^1.4.2
 
 dev_dependencies:
   hive_generator: ^1.1.2
@@ -86,6 +87,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
